# crypto_proxy_fast_api

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  __main__.py  app.py  deploy_local  docker-compose.yaml  loggers.py  pylama.ini  pyproject.toml  readme.md  requirements.txt  settings.py
api/: __init__.py  cloud_flare.py
models/: cloud_flare.py
services/: cloud_flare.py  memcache_api.py
tests/: test_endpoints.py  test_functions.py
tests/mock_data/: cloud_flare_response.txt
