[tool.poetry]
name = "crypto-proxy"
version = "0.1.0"
description = "Test crypto proxy server for cloudflare api"
authors = [
    "Ivan Pevtsov <ivan.pevtsov@gmail.com>"
]

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 120


[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.68.1"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
uvicorn = "^0.15.0"
python-dotenv = "^0.19.0"
requests = "^2.26.0"
pymemcache = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.15.0"
pytest-cov = "^2.12.1"
pytest-env = "^0.6.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
